--- a/as4_style.css
+++ b/as4_style.css
@@ -25,52 +25,13 @@
     padding-left: 200px;
     padding-right: 200px;
         }
-
-#paragraph {
-    color: rgb(255, 255, 255);
-    height: 80vh;
-    padding-top: 10px;
-    padding-left: 200px;
-        }
-
-#right {
-    color: rgb(255, 255, 255);
-    padding-top: 200px;
-    padding-right: 200px;
-        }
-          
-#left {
-    color: rgb(255, 255, 255);
-    padding-top: 200px;
-    padding-left: 200px;
-        }        
         
-#horizontal-container {
-            width: 100%;
-            height: 100vh;
-            overflow: hidden;
-            position: relative;
-            overflow: hidden;
-        }
-        
-#statusbar {
-            height: 100vh;
-            width: 250vw; 
-            background-image: url(horizontalscrolling.jpg);
-            background-size: cover;
-            background-position: left; 
-            background-repeat: no-repeat;
-            position: absolute;
-            transform: translateX(0);
-            will-change: transform;
-            background-color: black; 
-            left: 200px;
-        }
-        
-#outer {
-            height: 100vh;
-            position: sticky;
-            top: 0;
-            overflow: hidden;
-            background-color: black; /* 可選：添加背景色 */
-        }
+#statusbar {        
+    position: absolute;
+    left: 0;
+    height: 100vh;
+    width: 400vw; 
+    background-image: url("horizontalscrolling.jpg");
+    background-size: cover;
+    background-position: center;
+    }
