--- a/finalstyle.css
+++ b/finalstyle.css
@@ -2,17 +2,8 @@
 body {
     margin: 0;
     font-family: 'Noto Serif TC', serif;
-    background-color: #FEFCF7;
+    background-color: #f4f4f4;
     color: black;
-}
-
-.banner {
-    background-color: #FF9549;
-    color: #FFFFFF;
-    text-align: center;
-    padding: 20px 20px;
-    font-size: 20px;
-    font-weight: bold;
 }
 
 .division {
@@ -83,8 +74,7 @@ p-white {
             color: white;
             line-height: 200%;
             z-index: 2;
-            padding-left: 260px;
-            padding-right: 260px;
+            left: 50%;
             font-weight: medium;
         }
 
@@ -95,8 +85,7 @@ p-black {
             color: black;
             line-height: 200%;
             z-index: 2;
-            padding-left: 260px;
-            padding-right: 260px;
+            left: 50%;
             font-weight: medium;
         }
 
