--- a/finalstyle.css
+++ b/finalstyle.css
@@ -74,7 +74,8 @@ p-white {
             color: white;
             line-height: 200%;
             z-index: 2;
-            display: flex;
+            padding-left: 260px;
+            padding-right: 260px;
             font-weight: medium;
         }
 
@@ -85,7 +86,8 @@ p-black {
             color: black;
             line-height: 200%;
             z-index: 2;
-            display: flex;
+            padding-left: 260px;
+            padding-right: 260px;
             font-weight: medium;
         }
 
