--- a/finalstyle.css
+++ b/finalstyle.css
@@ -1,106 +1,105 @@
 /* 全局樣式 */
 body {
-    margin: 0;
-    font-family: 'Noto Serif TC', serif;
-    background-color: #f4f4f4;
-    color: black;
+  margin: 0;
+  font-family: "Noto Serif TC", serif;
+  background-color: #f4f4f4;
+  color: black;
 }
 
 .division {
-    position: relative;
-    padding: 20px;
-    margin-bottom: 20px;
+  position: relative;
+  padding: 20px;
+  margin-bottom: 20px;
 }
 
 .division img {
-    width: 100%;
-    height: auto;
+  width: 100%;
+  height: auto;
 }
 
 .division .overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: url(https://imgur.com/Ye5Ek3A.png) no-repeat center/cover;
-    z-index: 1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url(https://imgur.com/Ye5Ek3A.png) no-repeat center/cover;
+  z-index: 1;
 }
 
 /* Font */
 h1 {
-            text-align: center;
-            position: relative;
-            z-index: 2;
-            font-size: 40px;
-            color: white;
-            font-weight: bold;
-            line-height: 140%;
-            padding-left: 200px;
-            padding-right: 200px;
-            margin-top: 400px;
-        }
+  text-align: center;
+  position: relative;
+  z-index: 2;
+  font-size: 40px;
+  color: white;
+  font-weight: bold;
+  line-height: 140%;
+  padding-left: 200px;
+  padding-right: 200px;
+  margin-top: 400px;
+}
 
 h2 {
-            text-align: center;
-            position: relative;          
-            z-index: 2;
-            font-size: 28px;
-            color: black;
-            font-weight: bold;
-            line-height: 200%;
-            padding-left: 240px;
-            padding-right: 240px;
-            margin-bottom: 60px;
-            margin-top: 40px;
-        }
+  text-align: center;
+  position: relative;
+  z-index: 2;
+  font-size: 28px;
+  color: black;
+  font-weight: bold;
+  line-height: 200%;
+  padding-left: 240px;
+  padding-right: 240px;
+  margin-bottom: 60px;
+  margin-top: 40px;
+}
 
 h3 {
-            text-align: left;         
-            position: relative;          
-            z-index: 2;
-            font-size: 20px;
-            color: #FF9549;
-            font-weight: semibold;
-            line-height: 200%;
-            padding-left: 240px;
-            padding-right: 240px;
-        }
+  text-align: left;
+  position: relative;
+  z-index: 2;
+  font-size: 20px;
+  color: #ff9549;
+  font-weight: semibold;
+  line-height: 200%;
+  padding-left: 240px;
+  padding-right: 240px;
+}
 
 p-white {
-            text-align: center;         
-            position: absolute;
-            font-size: 18px;
-            color: white;
-            line-height: 200%;
-            z-index: 2;
-            padding-left: 260px;
-            padding-right: 260px;
-            font-weight: medium;
-        }
+  text-align: center;
+  position: absolute;
+  font-size: 18px;
+  color: white;
+  line-height: 200%;
+  z-index: 2;
+  padding-left: 260px;
+  padding-right: 260px;
+  font-weight: medium;
+}
 
 p-black {
-            text-align: left;          
-            position: absolute;
-            font-size: 18px;
-            color: black;
-            line-height: 200%;
-            z-index: 2;
-            padding-left: 260px;
-            padding-right: 260px;
-            font-weight: medium;
-        }
+  text-align: left;
+  position: absolute;
+  font-size: 18px;
+  color: black;
+  line-height: 200%;
+  z-index: 2;
+  padding-left: 260px;
+  padding-right: 260px;
+  font-weight: medium;
+}
 
 .highlight {
-            color: #FF9549;
-        }
+  color: #ff9549;
+}
 
 .quote {
-            color: #FF9549;
-            text-align: center; 
-            font-size: 32px;
-        }
-
+  color: #ff9549;
+  text-align: center;
+  font-size: 32px;
+}
 
 /* Flipping Card */
 
@@ -121,7 +120,8 @@ p-black {
   border-radius: 4px;
 }
 
-.cover, .back {
+.cover,
+.back {
   width: 100%;
   height: 100%;
   position: absolute;
@@ -131,15 +131,15 @@ p-black {
   justify-content: center;
   align-items: center;
   border-radius: 4px;
-  padding: 60px; 
-  box-sizing: border-box; 
+  padding: 60px;
+  box-sizing: border-box;
 }
 
 .cover {
-  color: #FFF;
+  color: #fff;
   font-size: 24px;
   font-weight: semibold;
-  background-color: #FF9549;
+  background-color: #ff9549;
   transform: rotateY(0deg);
 }
 
@@ -148,79 +148,78 @@ p-black {
 }
 
 .back {
-  color: #000000; 
+  color: #000000;
   font-size: 18px;
-  text-align: justify; 
+  text-align: justify;
   font-weight: normal;
   font-weight: medium;
-  background-color: #fee2cf; 
+  background-color: #fee2cf;
   transform: rotateY(-180deg);
-  line-height: 160%; 
+  line-height: 160%;
 }
 
 .card-container:hover .back {
   transform: rotateY(0deg);
 }
 
-
 /* Division 3 */
 .division3 {
-    height: 100vh;
-    overflow: hidden;
-    position: relative;
+  height: 100vh;
+  overflow: hidden;
+  position: relative;
 }
 
 .division3 img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    transition: opacity 1s ease-in-out;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: opacity 1s ease-in-out;
 }
 
 /* Division 6 */
 .division6 {
-    text-align: center;
-    padding-top: 40px;
+  text-align: center;
+  padding-top: 40px;
 }
 
 .division8 {
-    background-image: url('https://imgur.com/glYGS0v.jpg');
-    background-size: cover;
-    background-position: center;
-    position: relative;
-    height: 200vh;
-    display: flex;
-    align-items: flex-end;
-    justify-content: center;
-    color: white;
-    text-align: center;
+  background-image: url("https://imgur.com/glYGS0v.jpg");
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  height: 200vh;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  color: white;
+  text-align: center;
 }
 
 .division8::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-image: url('https://imgur.com/Ye5Ek3A.png');
-    background-size: cover;
-    z-index: 1;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("https://imgur.com/Ye5Ek3A.png");
+  background-size: cover;
+  z-index: 1;
 }
 
 .footer {
-    height: 480px;
-    background-color: #FF9549;
-    color: #FFFFFF;
-    padding-top: 52px;
-    font-size: 14px;
-    text-align: left;
+  height: 480px;
+  background-color: #ff9549;
+  color: #ffffff;
+  padding-top: 52px;
+  font-size: 14px;
+  text-align: left;
 }
 
 .footer a {
-    color: #FFFFFF;
-    text-decoration: none;
+  color: #ffffff;
+  text-decoration: none;
 }
