--- a/finalstyle.css
+++ b/finalstyle.css
@@ -2,7 +2,7 @@
 body {
     margin: 0;
     font-family: 'Noto Serif TC', serif;
-    background-color: #f4f4f4;
+    background-color: #f1f1f1;
     color: black;
 }
 
@@ -106,6 +106,7 @@ p-black {
   grid-template-columns: repeat(2, 1fr);
   gap: 32px;
   max-width: 800px;
+  margin: 0 auto;
 }
 
 .card-container {
@@ -220,4 +221,3 @@ p-black {
     color: #FFFFFF;
     text-decoration: none;
 }
-
